--- a/views/agb.ejs
+++ b/views/agb.ejs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Die Styles.css muss aus allen HTML-Dateien verlinkt werden-->
-    <link rel="stylesheet" href="styles.csss">
+    <!--bei dem link styles.css war ein s zu viel-->
+    <link rel="stylesheet" href="styles.css">
     <!--Es gibt im Internet Dienste, die Styles zur Verfügung stellen. Beispiel: font awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <title>Borken-Bank - AGB</title>
@@ -21,7 +22,8 @@
         <a href="agb"><i class="fa-solid fa-file-lines"></i> AGB</a>
         <a href="login"><i class="fa-solid fa-envelope"></i> Abmelden</a>
 
-    </head>
+    <!--im schließenden Tag muss anstatt head , header stehen-->
+    </header>
     <main>
         <h1>Allgemeine Geschäftsbedingungen (AGB) - Borken-Bank AG</h1>
 
@@ -39,7 +41,10 @@
 <h2>4. Kreditvergabe</h2>
 <p>Die Borken-Bank AG vergibt Kredite an ihre Kunden gemäß den geltenden gesetzlichen Bestimmungen und den individuellen Vereinbarungen mit dem jeweiligen Kunden. Die genauen Konditionen werden in den Kreditverträgen festgehalten.</p>
 
-<h2>6. Änderung der AGP</h3>
+<!--Der fünfte Absatz fehlt-->
+
+<!--im schließenden tag muss h2 stehen und nicht h3-->
+<h2>6. Änderung der AGP</h2>
 <p>Die Borken-Bank AG behält sich das Recht vor, diese Allgemeinen Geschäftsbedingungen jederzeit zu ändern. Änderungen werden den Kunden rechtzeitig bekannt gegeben und treten nach Ablauf einer angemessenen Frist in Kraft, sofern der Kunde nicht widerspricht.</p>
 
 <h2>7. Gerichtsstand und anwendbares Recht</h2>
@@ -52,7 +57,8 @@
 
     <footer>
         <p>Borken-Bank AG</p>
-        <p>Geschäftsführer: Hans Dampf, IBAN: 55 28 000 000</p>
+        <p>Geschäftsführer: Hans Dampf, IBAN: DE 55 28 000 000</p>
+        <!--bei der iban hat das Landeskennzeichen DE gefehlt-->
         <a href="https://www.borken-bank.de">Zur Homepage</a> 
     </footer>
 </body>
