--- a/views/kreditBeantragen.ejs
+++ b/views/kreditBeantragen.ejs
@@ -34,6 +34,8 @@
         </form>
         <p><%= Meldung %></p>
 
+        <p>Rückzahlungsbetrag: <%= rueckzahlungsbetrag.toFixed(2) %> €</p>
+
     </main>
 
     <footer>
